--- a/client/login.html
+++ b/client/login.html
@@ -61,12 +61,14 @@
 
               <button
                 type="button"
-                class="btn mt-4"
+                class="btn my-4"
                 style="width: 100%; background-color: #ffaa01"
                 id="login"
               >
                 Login
               </button>
+
+              <a href="signup.html" style="color: white; margin-top: 20px;">No account yet? Sign up here.</a>
             </form>
           </div>
         </div>
