--- a/client/appointment.html
+++ b/client/appointment.html
@@ -22,10 +22,29 @@
 
     <div class="w-100">
 
-        <div class="top-bar">
-            <img src="assets/img/isu_seal.png" alt="" class="top-bar-img">
-            <span class="top-bar-title">ISU Cauayan E-counselling Appointment Booking</span>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #116736; color: white;">
+            <div class="container-fluid">
+              <img class="logo" src="assets/img/isu_seal.png" style="height:60px;">
+              <span class="top-bar-title ms-4 me-5">ISU E-counselling</span>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                  <li class="nav-item">
+                    <a class="nav-link " aria-current="page" href="home.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="services.html">Services</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="appointment.html">Appointment</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
 
         <div class="main mt-3">
             <div class="d-flex flex-column align-items-center justify-content-center" style="height: 100%;">
