--- a/client/home.html
+++ b/client/home.html
@@ -39,9 +39,9 @@
                 <div class="d-flex flex-row align-items-center justify-content-center"
                     style="height: 100%; width: 100%;">
 
-                    <button class="borderless-btn me-5">Profile</button>
+                    <button class="borderless-btn me-5" onclick="location.href='profile.html'">Profile</button>
                     <button class="borderless-btn me-5" onclick="location.href='#services'">Services</button>
-                    <div class="outlined-cta">
+                    <div class="outlined-cta" onclick="location.href='appointment.html'">
                         Set Appointment
                     </div>
                     <button class="borderless-btn ms-5" onclick="location.href='#contactus'">Contact</button>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="d-flex flex-row align-items-center justify-content-center mt-m" style="width: 100%;">
 
-                    <a href="#" style="text-decoration: none;"><span class="service">Read more about the services</span>
+                    <a href="services.html" style="text-decoration: none;"><span class="service">Read more about the services</span>
                         <i class="bi bi-arrow-right" style="color:black; font-size:30px; font-weight: 400;"></i></a>
                 </div>
             </div>
