--- a/client/signup.html
+++ b/client/signup.html
@@ -67,6 +67,7 @@
                 class="btn mt-4"
                 style="width: 100%; background-color: #ffaa01"
                 id="login"
+                onclick="location.href='fillinfo.html'"
               >
                 Signup
               </button>
