--- a/client/fillinfo.html
+++ b/client/fillinfo.html
@@ -26,10 +26,12 @@
 
     <div class="w-100">
 
-        <div class="top-bar">
-            <img src="assets/img/isu_seal.png" alt="" class="top-bar-img">
-            <span class="top-bar-title">ISU Cauayan E-counselling Appointment Booking</span>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #116736; color: white;">
+            <div class="container-fluid">
+              <img class="logo" src="assets/img/isu_seal.png" style="height:60px;">
+              <span class="top-bar-title ms-4 me-5">ISU E-counselling</span>
+            </div>
+          </nav>
 
         <div class="main mt-3">
             <div class="d-flex flex-column align-items-center justify-content-center" style="height: 100%;">
