--- a/admin/login.html
+++ b/admin/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Signup</title>
+    <title>Login</title>
 
     <link rel="stylesheet" href="assets/css/styles.css" />
 
@@ -49,7 +49,7 @@
             >
               <img src="assets/img/isu_seal.png" alt="" style="height: 70px" />
               <h5 class="mt-2" style="text-align: center; font-weight: 400">
-                <small>ISU Cauayan</small><br />E-Counselling
+                <small>ISU Cauayan</small><br />E-Counselling Admin
               </h5>
             </div>
             <form class="">
@@ -59,17 +59,13 @@
               <label class="form-label mt-2">Password</label>
               <input type="password" id="password" class="form-control" />
 
-              <label class="form-label mt-2">Confirm Password</label>
-              <input type="password" id="confirm-password" class="form-control" />
-
               <button
                 type="button"
-                class="btn mt-4"
+                class="btn my-4"
                 style="width: 100%; background-color: #ffaa01"
                 id="login"
-                onclick="location.href='fillinfo.html'"
               >
-                Continue
+                Login
               </button>
             </form>
           </div>
