--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -1,37 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-counselling</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>E-counselling</title>
 
-    <link rel="stylesheet" href="assets/css/styles.css" />
+  <link rel="stylesheet" href="assets/css/styles.css" />
 
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
-    <!-- JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+
+  <script src="https://kit.fontawesome.com/09866f33f8.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <div class="w-100">
+  <div class="w-100">
+    <div class="sidebar pt-3 d-flex flex-column align-items-center">
 
-        <div class="sidebar">
+      <div class="d-flex flex-column">
+        <img src="assets/img/isu_seal.png" alt="" style="height:80px; object-fit: contain;">
+        <h4 class="mt-2 text-light" style="text-align: center; font-weight: 400">
+          <small class="text-light">ISU Cauayan</small><br />E-Counselling
+        </h4>
+      </div>
 
+      <div class="d-flex mt-5 flex-column align-items-center w-100">
+
+        <div class="sidebar-btn-active d-flex flex-row justify-content-start align-items-center px-3"
+          onclick="location.href='dashboard.html'">
+          <i class="fa-solid fa-chart-area ic-active me-3"></i>
+          Dashboard
         </div>
 
-        <div class="main">
-            fdf
+        <div class="sidebar-btn-inactive d-flex flex-row justify-content-start align-items-center px-3 mt-2"
+          onclick="location.href='pendingappointments.html'">
+          <i class="fa-solid fa-hourglass-start ic-inactive me-3"></i>
+          Pending appointments
         </div>
+
+        <div class="sidebar-btn-inactive d-flex flex-row justify-content-start align-items-center px-3 mt-2"
+          onclick="location.href='acceptedappointments.html'">
+          <i class="fa-solid fa-address-card ic-inactive me-3"></i>
+          Accepted appointments
+        </div>
+
+        <div class="sidebar-btn-inactive d-flex flex-row justify-content-start align-items-center px-3 mt-2"
+          onclick="location.href='completedmeetings.html'">
+          <i class="fa-solid fa-handshake ic-inactive me-3"></i>
+          Completed meetings
+        </div>
+
+        <div class="sidebar-btn-inactive d-flex flex-row justify-content-start align-items-center px-3 mt-2"
+        onclick="location.href='appointmentdates.html'">
+        <i class="fa-solid fa-calendar-check ic-inactive me-3"></i>
+        Appointment dates
+      </div>
+      </div>
+
     </div>
+
+    <div class="main">
+      <div class="d-flex flex-row justify-content-between">
+
+        <span class="page-title">Dashboard</span>
+        <button class="btn btn-danger">Logout</button>
+      </div>
+
+      <div>
+        <div class="card mt-4 d-flex p-3 d-flex flex-row justify-content-center" style="height: 250px; width: 100%">
+          <div style="height: 100%; width: 50%">
+            <span class="chart-title">Meetings</span>
+
+            <div class="d-flex mt-4">
+              <div class="me-3 bg-purple d-flex flex-column justify-content-center align-items-center"
+                style="height: 100px; width: 200px">
+                <span class="text-light">Online</span>
+                <!--TODO: Change value here-->
+                <h1 class="text-light">120</h1>
+              </div>
+
+              <div class="bg-pink d-flex flex-column justify-content-center align-items-center"
+                style="height: 100px; width: 200px">
+                <span class="text-light">Face-to-face</span>
+                <!--TODO: Change value here-->
+                <h1 class="text-light">120</h1>
+              </div>
+            </div>
+          </div>
+
+          <div class="card-1" style="height: 100%; width: 50%">
+            <!--TODO: Insert chart here-->
+            <div></div>
+          </div>
+        </div>
+
+        <div class="mt-4 d-flex flex-row">
+          <div class="card d-flex p-3 me-3 d-flex flex-row" style="height: 250px; width: 50%">
+            <span class="chart-title">Counselling Services</span>
+            <!--TODO: Insert chart here-->
+            <div></div>
+          </div>
+
+          <div class="card d-flex p-3 d-flex flex-row" style="height: 250px; width: 50%">
+            <span class="chart-title">Types of Counselling</span>
+            <!--TODO: Insert chart here-->
+            <div></div>
+          </div>
+        </div>
+
+
+        <div class="card mt-4 d-flex p-3 d-flex flex-row" style="height: 350px; width: 100%">
+          <span class="chart-title">Cases</span>
+          <!--TODO: Insert chart here-->
+          <div></div>
+        </div>
+
+
+
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
