--- a/client/appointment.html
+++ b/client/appointment.html
@@ -102,7 +102,7 @@
                     <span class="m-label mt-3">Additional information</span>
                     <input type="text" class="m-input">
 
-                    <button class="submit">Save and continue</button>
+                    <button class="submit">Set appointment</button>
 
 
                     <script type= "text/javascript"> 
