fix bug datepicker

--- a/admin/appointmentdates.html
+++ b/admin/appointmentdates.html
@@ -108,7 +108,7 @@
 
 
                     <span class="m-label mt-3">Date</span>
-                    <input type="date"  class="m-input  w-100" id="datePicker"></input>
+                    <input class="m-input  w-100" id="datePicker"></input>
 
                     <span class="m-label mt-3">Time</span>
                     <input type="time" class="m-input w-100" >
