--- a/admin/acceptedappointmentinformation.html
+++ b/admin/acceptedappointmentinformation.html
@@ -55,18 +55,18 @@
           </div>
 
           <div
-            class="sidebar-btn-active d-flex flex-row justify-content-start align-items-center px-3 mt-2"
+            class="sidebar-btn-inactive d-flex flex-row justify-content-start align-items-center px-3 mt-2"
             onclick="location.href='pendingappointments.html'"
           >
-            <i class="fa-solid fa-hourglass-start ic-active me-3"></i>
+            <i class="fa-solid fa-hourglass-start ic-inactive me-3"></i>
             Pending appointments
           </div>
 
           <div
-            class="sidebar-btn-inactive d-flex flex-row justify-content-start align-items-center px-3 mt-2"
+            class="sidebar-btn-active d-flex flex-row justify-content-start align-items-center px-3 mt-2"
             onclick="location.href='acceptedappointments.html'"
           >
-            <i class="fa-solid fa-address-card ic-inactive me-3"></i>
+            <i class="fa-solid fa-address-card ic-active me-3"></i>
             Accepted appointments
           </div>
 
