--- a/admin/completedmeetings.html
+++ b/admin/completedmeetings.html
@@ -50,13 +50,13 @@
           Pending appointments
         </div>
 
-        <div class="sidebar-btn-active d-flex flex-row justify-content-start align-items-center px-3 mt-2" onclick="location.href='acceptedappointments.php';">
-          <i class="fa-solid fa-address-card ic-active me-3"></i>
+        <div class="sidebar-btn-inactive d-flex flex-row justify-content-start align-items-center px-3 mt-2" onclick="location.href='acceptedappointments.php';">
+          <i class="fa-solid fa-address-card ic-inactive me-3"></i>
           Accepted appointments
         </div>
 
-        <div class="sidebar-btn-inactive d-flex flex-row justify-content-start align-items-center px-3 mt-2" onclick="location.href='completedmeetings.php';">
-          <i class="fa-solid fa-handshake ic-inactive me-3"></i>
+        <div class="sidebar-btn-active d-flex flex-row justify-content-start align-items-center px-3 mt-2" onclick="location.href='completedmeetings.php';">
+          <i class="fa-solid fa-handshake ic-active me-3"></i>
           Completed meetings
         </div>
 
@@ -66,14 +66,18 @@
         </div>
 
         <div class="sidebar-btn-inactive d-flex flex-row justify-content-start align-items-center px-3 mt-2" onclick="location.href='profile.php';">
-            <i class="fa-solid fa-user ic-inactive me-3"></i>
-            My Account
-          </div>
+          <i class="fa-solid fa-user ic-inactive me-3"></i>
+          My Account
+        </div>
       </div>
     </div>
 
     <div class="main">
-      <span class="page-title">Accepted appointments</span>
+      <span class="page-title">Completed Meetings</span>
+      <div class="d-flex flex-row justify-content-end mt-5">
+        <button class="btn btn-primary me-3"><i class="fa-solid fa-print text-white me-2"></i>Print</button>
+        <button class="btn btn-success"><i class="fa-solid fa-table text-white me-2"></i>Excel</button>
+      </div>
       <div class="mt-5">
         <table class="table table-hover">
           <thead class="thead">
@@ -83,12 +87,11 @@
               <th scope="col">Email</th>
               <th scope="col">Schedule</th>
               <th scope="col">Arrangement</th>
-              <th scope="col"></th>
             </tr>
           </thead>
           <tbody id="tbody">
-            <?php
-            $sql = "SELECT * FROM tblappointment WHERE appointment_status='accepted' ORDER BY id DESC;";
+          <?php
+            $sql = "SELECT * FROM tblappointment WHERE appointment_status='completed' ORDER BY id DESC;";
             $result = mysqli_query($conn, $sql);
             $resultCheck = mysqli_num_rows($result);
   
@@ -105,19 +108,12 @@
                 $arrangement = $row['appointment_arrangement'];
   
                 echo "
-                <tr style='cursor: context-menu;'>
+                <tr style='cursor: pointer;' class='clickable-row' data-href='completedmeetinginformation.php?id=$id'>
                   <th scope='row'>$count</th>
                   <td>$fullname</td>
                   <td>$email</td>
                   <td>$schedule</td>
                   <td>$arrangement</td>
-                  <td>
-                    <a href='acceptedappointmentinformation.php?id=$id'>
-                      <div class='tbl-btn-edit'>
-                        <i class='fa-solid fa-pen'></i>
-                      </div>
-                    </a>
-                  </td>
                 </tr>
                 ";
               }
@@ -127,5 +123,11 @@
         </table>
       </div>
   </div>
+
+  <script>
+    $(".clickable-row").click(function() {
+        window.location = $(this).data("href");
+    });
+  </script>
 </body>
 </html>
