--- a/admin/editadminuser.html
+++ b/admin/editadminuser.html
@@ -55,8 +55,8 @@
           Accepted appointments
         </div>
 
-        <div class="sidebar-btn-active d-flex flex-row justify-content-start align-items-center px-3 mt-2" onclick="location.href='completedmeetings.php';">
-          <i class="fa-solid fa-handshake ic-active me-3"></i>
+        <div class="sidebar-btn-inactive d-flex flex-row justify-content-start align-items-center px-3 mt-2" onclick="location.href='completedmeetings.php';">
+          <i class="fa-solid fa-handshake ic-inactive me-3"></i>
           Completed meetings
         </div>
 
@@ -64,54 +64,46 @@
           <i class="fa-solid fa-calendar-check ic-inactive me-3"></i>
           Appointment dates
         </div>
+
+        <div class="sidebar-btn-active d-flex flex-row justify-content-start align-items-center px-3 mt-2" onclick="location.href='manageusers.php';">
+            <i class="fa-solid fa-users ic-active me-3"></i>
+            Manage Users
+          </div>
+
+          <div class="sidebar-btn-inactive d-flex flex-row justify-content-start align-items-center px-3 mt-2" onclick="location.href='profile.php';">
+            <i class="fa-solid fa-user ic-inactive me-3"></i>
+            My Account
+          </div>
+
+          <div class="sidebar-btn-inactive d-flex flex-row justify-content-start align-items-center px-3 mt-2" onclick="location.href='profile.php';">
+            <i class="fa-solid fa-user ic-inactive me-3"></i>
+            My Account
+          </div>
       </div>
     </div>
 
     <div class="main">
-      <span class="page-title">Completed Meetings</span>
-      <div class="mt-5">
-        <table class="table table-hover">
-          <thead class="thead">
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Name</th>
-              <th scope="col">Email</th>
-              <th scope="col">Schedule</th>
-              <th scope="col">Arrangement</th>
-            </tr>
-          </thead>
-          <tbody id="tbody">
-          <?php
-            $sql = "SELECT * FROM tblappointment WHERE appointment_status='completed' ORDER BY id DESC;";
-            $result = mysqli_query($conn, $sql);
-            $resultCheck = mysqli_num_rows($result);
-  
-            $count = 0;
-        
-            if ($resultCheck > 0) {
-              while ($row = mysqli_fetch_assoc($result)) {
-                $count++;
-  
-                $id = $row['id'];
-                $fullname = $row['users_fullname'];
-                $email = $row['users_email'];
-                $schedule = $row['appointment_schedule'];
-                $arrangement = $row['appointment_arrangement'];
-  
-                echo "
-                <tr style='cursor: pointer;' class='clickable-row' data-href='completedmeetinginformation.php?id=$id'>
-                  <th scope='row'>$count</th>
-                  <td>$fullname</td>
-                  <td>$email</td>
-                  <td>$schedule</td>
-                  <td>$arrangement</td>
-                </tr>
-                ";
-              }
-            }
-            ?>
-          </tbody>
-        </table>
+      <div class="d-flex justify-content-between flex-row">
+        <span class="page-title">Edit Admin User</span>
+        <button class="btn btn-danger px-4">Delete user</button>
+      </div>
+      <div class="d-flex flex-row">
+
+        <div class="w-50 ms-auto me-auto mt-5 card p-5">
+          <span class="title-2"></span>
+
+          <span class="m-label mt-3">Name</span>
+          <input class="m-input w-100" id="name"></input>
+
+          <span class="m-label mt-3">User Role</span>
+          <select id="role" type="text" class="m-input w-100">
+            <option hidden></option>
+            <option>Admin</option>
+            <option>Counsellor</option>
+          </select>
+
+          <button type="button" class="btn btn-primary mt-4" onclick="btnSave()">Save</button>
+        </div>
       </div>
   </div>
 
