--- a/admin/profile.html
+++ b/admin/profile.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Accepted Appointments</title>
+  <title>My Account</title>
 
   <link rel="stylesheet" href="assets/css/styles.css" />
 
@@ -50,8 +50,8 @@
           Pending appointments
         </div>
 
-        <div class="sidebar-btn-active d-flex flex-row justify-content-start align-items-center px-3 mt-2" onclick="location.href='acceptedappointments.php';">
-          <i class="fa-solid fa-address-card ic-active me-3"></i>
+        <div class="sidebar-btn-inactive d-flex flex-row justify-content-start align-items-center px-3 mt-2" onclick="location.href='acceptedappointments.php';">
+          <i class="fa-solid fa-address-card ic-inactive me-3"></i>
           Accepted appointments
         </div>
 
@@ -65,67 +65,45 @@
           Appointment dates
         </div>
 
-        <div class="sidebar-btn-inactive d-flex flex-row justify-content-start align-items-center px-3 mt-2" onclick="location.href='profile.php';">
-            <i class="fa-solid fa-user ic-inactive me-3"></i>
+        <div class="sidebar-btn-inactive d-flex flex-row justify-content-start align-items-center px-3 mt-2" onclick="location.href='manageusers.php';">
+            <i class="fa-solid fa-users ic-inactive me-3"></i>
+            Manage Users
+          </div>
+
+          <div class="sidebar-btn-active d-flex flex-row justify-content-start align-items-center px-3 mt-2" onclick="location.href='profile.php';">
+            <i class="fa-solid fa-user ic-active me-3"></i>
             My Account
           </div>
       </div>
     </div>
 
     <div class="main">
-      <span class="page-title">Accepted appointments</span>
-      <div class="mt-5">
-        <table class="table table-hover">
-          <thead class="thead">
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Name</th>
-              <th scope="col">Email</th>
-              <th scope="col">Schedule</th>
-              <th scope="col">Arrangement</th>
-              <th scope="col"></th>
-            </tr>
-          </thead>
-          <tbody id="tbody">
-            <?php
-            $sql = "SELECT * FROM tblappointment WHERE appointment_status='accepted' ORDER BY id DESC;";
-            $result = mysqli_query($conn, $sql);
-            $resultCheck = mysqli_num_rows($result);
-  
-            $count = 0;
-        
-            if ($resultCheck > 0) {
-              while ($row = mysqli_fetch_assoc($result)) {
-                $count++;
-  
-                $id = $row['id'];
-                $fullname = $row['users_fullname'];
-                $email = $row['users_email'];
-                $schedule = $row['appointment_schedule'];
-                $arrangement = $row['appointment_arrangement'];
-  
-                echo "
-                <tr style='cursor: context-menu;'>
-                  <th scope='row'>$count</th>
-                  <td>$fullname</td>
-                  <td>$email</td>
-                  <td>$schedule</td>
-                  <td>$arrangement</td>
-                  <td>
-                    <a href='acceptedappointmentinformation.php?id=$id'>
-                      <div class='tbl-btn-edit'>
-                        <i class='fa-solid fa-pen'></i>
-                      </div>
-                    </a>
-                  </td>
-                </tr>
-                ";
-              }
-            }
-            ?>
-          </tbody>
-        </table>
+      <div class="d-flex justify-content-between flex-row">
+        <span class="page-title">My Account</span>
+        <button class="btn btn-primary px-4">Edit</button>
+      </div>
+      <div class="d-flex flex-row">
+
+        <div class="w-50 ms-auto me-auto mt-5 card p-5">
+          <span class="title-2"></span>
+
+          <span class="m-label mt-3">Name</span>
+          <span class="h5">Juan DelaCruz</span>
+
+          <span class="m-label mt-3">Email</span>
+          <span class="h5">Juandeldela@gmail.cucumber</span>
+
+          <span class="m-label mt-3">Role</span>
+          <span class="h5">Admin</span>
+
+        </div>
       </div>
   </div>
+
+  <script>
+    $(".clickable-row").click(function() {
+        window.location = $(this).data("href");
+    });
+  </script>
 </body>
 </html>
