--- a/admin/editprofile.html
+++ b/admin/editprofile.html
@@ -75,17 +75,12 @@
             My Account
           </div>
 
-          <div class="sidebar-btn-inactive d-flex flex-row justify-content-start align-items-center px-3 mt-2" onclick="location.href='profile.php';">
-            <i class="fa-solid fa-user ic-inactive me-3"></i>
-            My Account
-          </div>
       </div>
     </div>
 
     <div class="main">
       <div class="d-flex justify-content-between flex-row">
-        <span class="page-title">My Account</span>
-        <button class="btn btn-primary px-4">Edit</button>
+        <span class="page-title">Update Account</span>
       </div>
       <div class="d-flex flex-row">
 
@@ -98,7 +93,10 @@
           <span class="m-label mt-3">Email</span>
           <input class="m-input w-100" id="email"></input>
           
-          <span class="m-label mt-3">Password</span>
+          <span class="m-label mt-3">Current Password</span>
+          <input type="password" class="m-input w-100" id="timePicker">
+
+          <span class="m-label mt-3">New Password</span>
           <input type="password" class="m-input w-100" id="timePicker">
 
           <span class="m-label mt-3">Confirm Password</span>
