--- a/admin/manageusers.html
+++ b/admin/manageusers.html
@@ -78,7 +78,13 @@
     </div>
 
     <div class="main">
-      <span class="page-title">Admin Users</span>
+
+      <div class="d-flex flex-row ">
+        
+        <span class="page-title">Admin Users</span>
+        <button class="btn btn-primary ms-5">Login history</button>
+      </div>
+
       <div class="d-flex flex-row">
         <div class="mt-5 w-50 me-5 px-2">
           <table class="table table-hover">
